Fix modal pop up on mobile

--- a/src/components/modals/styles/AddItemModal.css
+++ b/src/components/modals/styles/AddItemModal.css
@@ -28,8 +28,13 @@
 
 @media (max-width: 450px) {
   .addTitle {
-    margin-bottom: 5px;
-    margin-top: 25px;
+    margin-bottom: 10px;
+    margin-top: 15px;
+  }
+
+  .helperText {
+    margin-top: 1.1rem;
+    font-size: .8rem;
   }
 }
 
